--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,81 @@
 .App {
   text-align: center;
 }
+
+
+/* CSS för kort */
+.card {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  /* background-image: linear-gradient(rgb(51, 180, 255), rgb(0, 140, 255)); */
+  background-image: linear-gradient(rgb(255, 51, 112), rgb(183, 0, 255));
+  margin: auto;
+  width: 360px;
+  height: 190px;
+  border-radius: 10px;
+  color: #bbb959;
+  text-shadow: #615f56 1px 1px 2px;
+  }
+  
+.chip { 
+  grid-area: 3 / 1 / 4 / 3; 
+}
+
+.chip > img{
+  height: 35px;
+  text-align: left;
+  float: left;
+  padding-left: 15px;
+}
+
+.logo { 
+  grid-area: 1 / 3 / 3 / 6; 
+  padding: 5px;
+
+}
+
+.logo > img {
+  width: 100%;
+}
+.cardNumbers { 
+  grid-area: 4 / 1 / 5 / 6; 
+  width: 100%;
+  letter-spacing: 8px;
+  font-size: 23px;
+  
+}
+
+.cardNumbers p {
+  margin: 0;
+  text-align: middle;
+}
+
+.name { 
+  grid-area: 5 / 1 / 6 / 4; 
+  text-align: left;
+  padding-left: 8px;
+  font-size: 18px;
+}
+.name.p {
+  margin: 0;
+  margin-top:12px;
+}
+
+.date { 
+  grid-area: 5 / 4 / 6 / 6; 
+  text-align: right;
+  padding-right: 8px;
+  font-size: 18px;
+}
+
+.date.p {
+  margin: 0;
+  margin-top: 12px;
+}
+
+.whoKnows { 
+  grid-area: 1 / 1 / 3 / 3; 
+}
+
+  
