--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,13 @@
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(5, 1fr);
   /* background-image: linear-gradient(rgb(51, 180, 255), rgb(0, 140, 255)); */
-  background-image: linear-gradient(rgb(255, 51, 112), rgb(183, 0, 255));
+
+  /* LE LOGO */
+  background-image: linear-gradient(rgb(92, 144, 212), rgb(76, 101, 146));
+
+  /* VISA LOGO */
+  /* background-image: linear-gradient(rgb(255, 51, 112), rgb(183, 0, 255)); */
+
   margin: auto;
   width: 360px;
   height: 190px;
@@ -29,14 +35,17 @@
   padding-left: 15px;
 }
 
+
 .logo { 
   grid-area: 1 / 3 / 3 / 6; 
   padding: 5px;
-
 }
+/* .vendorVisa > img {
+  width: 100%
+} */
 
 .logo > img {
-  width: 100%;
+  width: 80%;
 }
 .cardNumbers { 
   grid-area: 4 / 1 / 5 / 6; 
