--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,17 @@
   text-align: center;
 }
 
-/* .inactiveCards > .deleteButton {
-  display:
-} */
-
 /* CSS för kort - default*/
 .card {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  background-image: linear-gradient(rgb(92, 144, 212), rgb(76, 101, 146));
+  /* background-image: linear-gradient(rgb(92, 144, 212), rgb(76, 101, 146)); */
+  background-image: url("logos/patterns.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: rgb(92, 144, 212);
   margin: auto;
   width: 360px;
   height: 190px;
@@ -30,7 +31,6 @@
   background-position: left;
   background-size: 50%;
   background-repeat: no-repeat;
-  /* background-blend-mode:multiply; */
   background-color: rgb(169, 201, 165);
   margin: auto;
   width: 360px;
@@ -65,7 +65,12 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  background-image: linear-gradient(rgb(255, 209, 123), rgb(255, 167, 52));
+  /* background-image: linear-gradient(rgb(255, 209, 123), rgb(255, 167, 52)); */
+  background-image: url("logos/swedbanktree.png");
+  background-color: rgb(255, 181, 21);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
   margin: auto;
   width: 360px;
   height: 190px;
@@ -79,7 +84,12 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  background-image: linear-gradient(rgb(247, 144, 144), rgb(167, 82, 82));
+  /* background-image: linear-gradient(rgb(247, 144, 144), rgb(167, 82, 82)); */
+  background-image: url("logos/starsbackground.png");
+  background-color: rgb(247, 144, 144);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   margin: auto;
   width: 360px;
   height: 190px;
@@ -88,24 +98,42 @@
   text-shadow: #615f56 1px 1px 2px;
 }
 
-.chip { 
-  grid-area: 3 / 1 / 4 / 3; 
-}
-
-.chip > img{
-  height: 35px;
-  text-align: left;
-  float: left;
-  padding-left: 15px;
-}
-
 .logo { 
   grid-area: 1 / 3 / 3 / 6; 
   padding: 5px;
 }
 
 .logo > img {
+  width: 100%;
+  padding-top: 10px;
+  /* padding-right: 10px; */
+}
+
+.cardIca > .logo{
+  width: 90%;
+}
+
+.cardVisa > .logo{
   width: 80%;
+  padding-left: 30px;
+  /* text-align: end; */
+  /* float: right; */
+}
+
+.cardLE > .logo {
+  width: 80%;
+  padding-left: 30px;
+}
+
+.chip { 
+  grid-area: 3 / 1 / 4 / 3; 
+}
+
+.chip > img{
+  width: 30%;
+  text-align: left;
+  float: left;
+  padding-left: 15px;
 }
 
 .cardNumbers { 
@@ -133,7 +161,7 @@
 }
 
 .date { 
-  grid-area: 5 / 4 / 6 / 6; 
+  grid-area: 5 / 4 / 6 / 5; 
   text-align: right;
   padding-right: 18px;
   font-size: 18px;
@@ -144,7 +172,17 @@
   margin-top: 12px;
 }
 
-.whoKnows { 
+.mastercard {
+  grid-area: 5 / 5 / 6 / 6; 
+}
+
+.mastercard > img {
+  padding-top: 10px;
+  padding-right: 10px;
+  width: 90%;
+}
+
+.emptyField { 
   grid-area: 1 / 1 / 3 / 3; 
 }
 
@@ -153,8 +191,4 @@
   background-color: transparent;
   font-size: larger;
   padding: 10px;
-}
-
-.hideStartButton {
-  display: none;
 }
